Add Apolloconfig Inst
https://github.com/open-telemetry/opentelemetry-java-instrumentation/issues/12787